--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     }
   </style>
 
-  <div class="container">
-    <div class="row" id="headerDiv">
+  <div class="">
+    <div class="row" id="headerDiv" style="padding: 25px 40px;">
       <div class="col-lg-3 text-center">
         <img src="avatar_cropped_circle_979ba2.png" width="200px" height="200px" />
       </div>
@@ -104,7 +104,7 @@
       </div>
       <div class="col-lg-6"></div>
     </div>
-    <div class="row">
+    <div class="row" style="padding: 0px 50px">
       <div class="col-lg-12">
         <div class="row section">
           <div class="col-lg-12">
@@ -120,7 +120,7 @@
         <div class="row bottom-line"></div>
       </div>
     </div>
-    <div class="row" id="mainDiv">
+    <div class="row" id="mainDiv" style="padding: 0px 50px;">
       <div class="col-lg-8">
         <div class="row section">
           <div class="col-lg-12">
@@ -349,10 +349,10 @@
 
       </div>
     </div>
-    <div class="row bottom-line"></div>
-
-    <div class="row" id="footerDiv">
-      <div class="col-lg-12" style="padding:20px 0px;font-size:14px;">
+    
+    <div class="row" id="footerDiv" style="padding: 0px 50px">
+      <div class="row bottom-line"></div>
+      <div class="col-lg-12" style="padding:20px 40px; font-size:14px;">
         <i class="title">Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji
           procesu rekrutacji zgodnie z Rozporządzeniem Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia
           2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego
